# rag-code-helper

./: .gitignore  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
chroma_langchain_db/: chroma.sqlite3
eval/: test_retriever.py
eval/dataset/: generate_eval_dataset.py  test_data.csv
eval/prompt_templates/: question_generate.txt
src/: secrets.py  settings.py
src/embs/: Dockerfile  app.py  config.py  embedders.py  encoders.py
src/srv/: app.py  utils.py
src/srv/components/: __init__.py  ast_splitter.py  chroma_operator.py  embedder.py  generative_models.py  llm_operator.py
src/srv/operators/: chroma_operator.py
src/srv/prompt_templates/: give_advice--system.txt  give_advice--user.txt  normalize--system.txt  translate--system.txt
