[project]
name = "code-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "fastapi>=0.129.0",
    "huggingface-hub>=1.4.1",
    "langchain-openai>=1.1.10",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=5.2.0",
    "uvicorn>=0.41.0",
]

[dependency-groups]
embs = [
    "python-multipart>=0.0.22",
]
srv = [
    "langchain>=1.2.10",
    "langchain-chroma>=1.1.0",
    "langchain-text-splitters>=1.1.1",
]
